--- a/chessbot-sandbox.ipynb
+++ b/chessbot-sandbox.ipynb
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 834,
-   "id": "22b94f05",
+   "id": "6d950552",
    "metadata": {
     "scrolled": false
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 833,
-   "id": "4b91cd2c",
+   "id": "c5486af0",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 596,
-   "id": "7691687c",
+   "id": "c2e3dcbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,13 +465,14 @@
     "## 96-4-0 against 0 Elo: 627\n",
     "## 1-0 against 250 Elo: 629\n",
     "## 1-0 against 400 Elo: 633\n",
-    "## 1-0 against 550 Elo: 641\n"
+    "## 1-0 against 550 Elo: 641\n",
+    "## 1-1 against 700 Elo: 644"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06a511ce",
+   "id": "07902840",
    "metadata": {},
    "outputs": [],
    "source": []
